Color coding & UI

--- a/dev/index.html
+++ b/dev/index.html
@@ -18,8 +18,8 @@
         <div class="studs">STUDS</div>
         <div role="main" class="main">
             <h1>
-                StudentVUE - but it isn't super <br>
-                <span class="slow">slooooooow. </span>
+                A fast, reliable, and beautiful client of<br>
+                <span class="slow">StudentVUE.</span>
             </h1>
             <span>An enhanced experience of
                 <a href="https://edupoint.com/Products/ParentVUE-StudentVUE" class="sv">
@@ -35,20 +35,29 @@
             <button id="login" class="">Sign in</button>
         </div>
         <div class="privacy-wrap">
-            <p class="question">How we use your data (we don't)</p>
+            <p class="question">This website is safe to use</p>
             <p class="content">
+                This website is open sourced <a href="https://github.com/itsisaac19/studs">on Github</a>.
+                
                 Your login info and StudentVUE data is <u><b>never</b></u> shared, saved, or sold. Period.
                 <br>
-                All of the website code is open for viewing <a href="https://github.com/itsisaac19/studs">on Github</a>.
             </p>
         </div>
         <div class="about" role="button" tabindex="0">about</div>
 
         <section class="why">
-            <h2>The big question — Why?</h2>
+            <h2>The big question — how does it work?</h2>
             <p class="explain">
+                StudentVUE has created a database which developers are granted access to through an API (application programming interface). 
+                <br><br> We can then take a user's login credentials, send them to StudentVUE, and if they match the credentials that they have stored, it grants the developer access to 
+                the user's data. <br> <br> <b>At no point during this process are the user credentials exposed to the developer for extraction or exploitation.</b>
+            </p>
+
+
+            <h2 class="listen">Ok, but why?</h2>
+            <p class="explain-3">
                 We're tired of the laggy websites and slow loading times. The buggy
-                app that seems to prevent us from seeing that AP score, that one exam
+                app that seems to prevent us from seeing that AP class score, that one exam
                 we never studied for, that one test that we actually felt good about.
             </p>
             <p class="explain-2">
@@ -61,7 +70,7 @@
             </ul>
 
             <h2 class="listen">We're listening to the parents and students</h2>
-            <p class="explain-3">
+            <p class="explain-3 last">
                 We're responding to the endless complaints. And that's not an
                 exaggeration — there's currently over 10,000 one-star reviews on the
                 app store.
