--- a/dev/index.html
+++ b/dev/index.html
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Studs - A blazing fast StudentVUE client</title>
     <meta name="description" content="A blazing fast StudentVUE client.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='b' viewBox='0 0 97.605 131.739'%3E%3Cg id='c'%3E%3Cg%3E%3Cpolyline points='3 17.348 3 65.87 3 114.391' style='fill:none; stroke:%23000; stroke-miterlimit:10; stroke-width:6px;'/%3E%3Cpolyline points='3 90.13 73.668 90.13 73.668 65.87 23.937 65.87 23.937 41.609 94.605 41.609' style='fill:none; stroke:%23000; stroke-miterlimit:10; stroke-width:6px;'/%3E%3Cpolyline points='94.605 17.348 94.605 65.87 94.605 114.391' style='fill:none; stroke:%23000; stroke-miterlimit:10; stroke-width:6px;'/%3E%3Crect x='3' y='114.391' width='91.605' height='14.348' style='stroke:%23000; stroke-miterlimit:10; stroke-width:6px;'/%3E%3Crect x='3' y='3' width='91.605' height='14.348' style='stroke:%23000; stroke-miterlimit:10; stroke-width:6px;'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E">
+
+    <!-- Primary Meta Tags -->
+    <title>A fast, reliable, and beautiful client of StudentVUE.</title>
+    <meta name="title" content="A fast, reliable, and beautiful client of StudentVUE.">
+    <meta name="description" content="Studs - reimagine your StudentVUE experience.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://studsvue.netlify.app/">
+    <meta property="og:title" content="A fast, reliable, and beautiful client of StudentVUE.">
+    <meta property="og:description" content="Studs - reimagine your StudentVUE experience.">
+    <meta property="og:image" content="https://studsvue.netlify.app/metaimage.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://studsvue.netlify.app/">
+    <meta property="twitter:title" content="A fast, reliable, and beautiful client of StudentVUE.">
+    <meta property="twitter:description" content="Studs - reimagine your StudentVUE experience.">
+    <meta property="twitter:image" content="https://studsvue.netlify.app/metaimage.png">
+
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -46,7 +66,7 @@
         <div class="about" role="button" tabindex="0">about</div>
 
         <section class="why">
-            <h2>The big question — how does it work?</h2>
+            <h2>The big question — how does it <span class="fancy">work</span>?</h2>
             <p class="explain">
                 StudentVUE has created a database which developers are granted access to through an API (application programming interface). 
                 <br><br> We can then take a user's login credentials, send them to StudentVUE, and if they match the credentials that they have stored, it grants the developer access to 
@@ -54,14 +74,14 @@
             </p>
 
 
-            <h2 class="listen">Ok, but why?</h2>
+            <h2 class="listen">Ok, but <span class="fancy2">why</span>?</h2>
             <p class="explain-3">
-                We're tired of the laggy websites and slow loading times. The buggy
-                app that seems to prevent us from seeing that AP class score, that one exam
-                we never studied for, that one test that we actually felt good about.
+                We're tired of the laggy website and slow loading times. The buggy
+                app that seems to break every once-in-a-while. We want a reliable, fast,
+                and practical interface.
             </p>
             <p class="explain-2">
-                With STUDS, we reimagined your StudentVUE experience.
+                With STUDS, reimagine your StudentVUE experience.
             </p>
             <ul class="e-list">
                 <li>You <i>understand</i> what you're looking at.</li>
@@ -69,7 +89,7 @@
                 <li>Better statistics</li>
             </ul>
 
-            <h2 class="listen">We're listening to the parents and students</h2>
+            <h2 class="listen">We're <span class="fancy3">listening</span> to the parents and students</h2>
             <p class="explain-3 last">
                 We're responding to the endless complaints. And that's not an
                 exaggeration — there's currently over 10,000 one-star reviews on the
@@ -98,7 +118,7 @@
                 <div class="little-grid">
                 </div>
 
-                <div class="main-card">
+                <div class="main-card hide">
                     <div class="gpa-header">
                         <div class="title">
                             CUMULATIVE GPA <span class="gpa-value"></span>
@@ -116,7 +136,7 @@
                         <canvas id="gpa-graph" style="max-width: 100%;"></canvas>
                     </div>
                 </div>
-                <div class="sub-card">
+                <div class="sub-card hide">
                     <div class="latest-label">Latest Graded Assignments</div>
                     <div class="latest-grid">
                     </div>
